--- a/style.css
+++ b/style.css
@@ -600,6 +600,17 @@
 /*OLIVER*/
 
 
+.sectionskewed {
+
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    background: #F3F3F3;
+    -webkit-transform: translateY(100%);
+    -ms-transform: translateY(100%);
+    transform: translateY(100%);
+}
+
 
 
 
