--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*----------fælles(1-150)----------*/
 body {
-    margin: 0%;
+    margin: 0;
+    box-sizing: border-box;
 
 }
 
@@ -149,9 +150,7 @@ a {
 
 
 
-body {
-    margin: 0;
-}
+
 
 
 #landingpage .skew_grey {
