--- a/style.css
+++ b/style.css
@@ -790,6 +790,7 @@ header nav a {
     color: black;
     text-decoration: none;
 
+
 }
 
 .header nav a:hover {
@@ -814,6 +815,8 @@ header nav a {
 
 .header .logo {
     float: left;
+    position: relative;
+    background-image: url(img/logo/);
 }
 
 .header .menu {
